Fixed horizontal scrolling on firehose for small screens

--- a/src/_includes/css/main.css
+++ b/src/_includes/css/main.css
@@ -211,7 +211,7 @@ img[width][height] {
 
 .aux-links {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   gap: 3rem;
 }
 
